profile edits and updates

--- a/public/index.html
+++ b/public/index.html
@@ -112,6 +112,16 @@
                     </a>
                 </div>
                 <div class="col-sm-6 portfolio-item">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="images/portfolio/surfwatchlabs.png" class="img-responsive" alt="" />
+                    </a>
+                </div>
+                <div class="col-sm-6 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -280,6 +290,10 @@
                                 <li>Service: <strong><a href="#">Web Development</a></strong>
                                 </li>
                             </ul>
+                            <hr>
+                            <img src="images/portfolio/itinthed-site.jpg" class="img-responsive img-centered" alt="">
+                            <hr>
+                            <img src="images/portfolio/itinthed-group.jpg" class="img-responsive img-centered" alt="">
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -312,6 +326,8 @@
                                 <li>Service: <strong><a href="#">Web Development - Software Engineering</a></strong>
                                 </li>
                             </ul>
+                            <hr>
+                            <img src="images/portfolio/hackathon.jpg" class="img-responsive img-centered" alt="">
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -319,7 +335,41 @@
             </div>
         </div>
     </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2 style="text-align:center;">SurfWatch Labs</h2>
+                            <hr class="star-primary">
+                            <img src="images/portfolio/surfwatch.png" class="img-responsive img-centered" alt="">
+                            <p>Production Developer for SurfWatch Labs.</p> 
+                            <p>Currently building, debugging and maintaining application feature sets across multiple technologies.</p>
+                            <ul class="list-inline item-details">
+                                <li>Client: <strong><a href="http://www.surfwatchlabs.com/">SurfWatch Labs</a></strong>
+                                </li>
+                                <li>Date: <strong><a href="#">2013 - Present</a></strong>
+                                </li>
+                                <li>Service: <strong><a href="#">Web Development - Software Engineering</a></strong>
+                                </li>
+                            </ul>
+                            <hr>
+                            <img src="images/portfolio/swa.jpg" class="img-responsive img-centered" alt="">
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+<div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -364,7 +414,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2 style="text-align:center;">SurfWatch Labs (Hacksurfer)</h2>
+                            <h2 style="text-align:center;">Hacksurfer</h2>
                             <hr class="star-primary">
                             <img src="images/portfolio/hacksurfer.jpg" class="img-responsive img-centered" alt="">
                             <p>CORE Team, Ruby on Rails Developer since v. 1.0 of www.hacksurfer.com and associated applications. Lead Production Application Engineer for v. 2.0+.</p>
