added smarterer asset and link

--- a/public/index.html
+++ b/public/index.html
@@ -142,6 +142,25 @@
                     </a>
                 </div>
             </div>
+            <hr>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Check out my skills tests at:</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 text-center portfolio-item">
+                    <a href="http://smarterer.com/b_chaiken" class="portfolio-link" target="_blank">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <br><img src="images/portfolio/smarterer-logo.png" class="img-responsive" alt="" />
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -161,13 +180,6 @@
                 <div class="col-lg-4">
                     <p>I hack in an effort to develop my own solutions for today's problems. I am a humanist by nature, Mnmlst by design, and a student always, never a master.</p>
                 </div>
-<!--
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Text
-                    </a>
-                </div>
--->
             </div>
         </div>
     </section>
@@ -182,36 +194,11 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-<!--
-                    <form role="form">
-                        <div class="row">
-                            <div class="form-group col-xs-12 floating-label-form-group">
-                                <label for="name">Name</label>
-                                <input class="form-control" type="text" name="name" placeholder="Name">
-                            </div>
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2 text-center">
+                            <a href="mailto:brad.chaiken@gmail.com" class="btn btn-lg btn-success"><i class="fa fa-envelope-o fa-fw"></i> Email</a>
                         </div>
-                        <div class="row">
-                            <div class="form-group col-xs-12 floating-label-form-group">
-                                <label for="email">Email Address</label>
-                                <input class="form-control" type="email" name="email" placeholder="Email Address">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="form-group col-xs-12 floating-label-form-group">
-                                <label for="message">Message</label>
-                                <textarea placeholder="Message" class="form-control" rows="5"></textarea>
-                            </div>
-                        </div>
-                        <br>
--->
-                        <div class="row">
-                            <div class="col-lg-8 col-lg-offset-2 text-center">
-                                <a href="mailto:brad.chaiken@gmail.com" class="btn btn-lg btn-success"><i class="fa fa-envelope-o fa-fw"></i> Email</a>
-                            </div>
-                        </div>
-<!--
-                    </form>
--->
+                    </div>
                 </div>
             </div>
         </div>
@@ -360,8 +347,6 @@
                                 <li>Service: <strong><a href="#">Web Development - Software Engineering</a></strong>
                                 </li>
                             </ul>
-                            <hr>
-                            <img src="images/portfolio/swa.jpg" class="img-responsive img-centered" alt="">
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
